--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry including="jianzhi/" kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
